--- a/js_client/index.html
+++ b/js_client/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>AlgaFood</title>
+    <title>Food Analytics</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
@@ -19,32 +19,13 @@
         <div class="row">
             <button id="btn-consultar" class="btn btn-primary">Consultar</button>
         </div>
-
         <div class="row">
-            <table id="tabela" class="table table-striped table-hover">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>Código</th>
-                        <th>Descrição</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td colspan="3">Nenhuma forma de pagamento encontrada</td>
-                    </tr>
-                </tbody>
-            </table>
+            <button id="btn-login" class="btn btn-primary">Login</button>
         </div>
 
         <div class="row">
-            <form>
-                <div class="form-group">
-                    <label for="campo-descricao">Descrição</label>
-                    <input type="text" class="form-control" id="campo-descricao">
-                </div>
-                <button type="button" class="btn btn-primary" id="btn-cadastrar">Cadastrar</button>
-            </form>
+            <div id="resultado">
+            </div>
         </div>
     </div>
 
